# taxcom_test

./: .env  README.md  docker-compose.yml  sql_task.md
app/: Dockerfile  pyproject.toml
app/src/: main.py  models.py
app/src/database/: __init__.py  db_api.py
app/src/routers/: invoices.py  persons.py
postgre_sql/: 01_postgres_init.sql  02_populate_database.sql  test_database.sql
